--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,23 +1,15 @@
 name: lint test and deploy
 on: push 
-jobs:
-  lint: 
-    runs-on: ubuntu-latest 
-    steps:
-      - name: get code
-        uses: actions/checkout@v3 
-      - name: install dependencies 
-        run: npm ci
-      - name: lint code
-        run: npm run lint 
+jobs: 
   test:
-    needs: lint 
     runs-on: ubuntu-latest 
     steps:
       - name: get code
         uses: actions/checkout@v3 
       - name: install dependencies 
         run: npm ci
+      - name: lint code 
+        run: npm run lint 
       - name: test code
         run: npm run test 
   build: 
@@ -28,6 +20,19 @@ jobs:
         uses: actions/checkout@v3 
       - name: install dependencies 
         run: npm ci
-      - name: test code
+      - name: build code
         run: npm run build 
+      - name: upload artifacts 
+        uses: actions/upload-artifact@v3 
+        with:
+          name: dist-files # artifact name useful for retrieving them 
+          path: | # where to find the artifacts
+            dist 
+            package.json 
+  deploy: 
+    needs: build
+    runs-on: ubuntu-latest 
+    steps:
+      - name: deploy 
+        run: echo "deploying ..."
         
