--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -26,9 +26,10 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: dist-files # artifact name useful for retrieving them 
-          path: | # where to find the artifacts
-            dist 
-            package.json 
+          path: dist 
+          # path: | # where to find the artifacts
+          #   dist 
+          #   package.json 
   deploy: 
     needs: build
     runs-on: ubuntu-latest 
