--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,6 +15,8 @@ jobs:
   build: 
     needs: test 
     runs-on: ubuntu-latest 
+    outputs:
+      script-file: ${{ steps.publish.outputs.output-file }} # up to you, what you use to access the actual output 
     steps:
       - name: get code
         uses: actions/checkout@v3 
@@ -22,6 +24,9 @@ jobs:
         run: npm ci
       - name: build code
         run: npm run build 
+      - name: publish js filename 
+        id: publish 
+        run: find dist/assets/*.js -type f -execdir echo 'output-file={}' >> $GITHUB_OUTPUT ';'
       - name: upload artifacts 
         uses: actions/upload-artifact@v4
         with:
@@ -40,6 +45,8 @@ jobs:
           name: dist-files #use same name as from the upload artifacts step 
       - name: output content 
         run: ls # should show all contents of the dist folder from previous job 
+      - name: output file name
+        run: echo "${{ needs.build.outputs.script-file }}" # use the output from the build job 
       - name: deploy 
         run: echo "deploying ..."
         
